change domain object type to record