@@ -3,14 +3,16 @@ package org.manage.log.query.provider.repository.mysql.builder;
 import com.google.common.collect.ImmutableList;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.tuple.ImmutablePair;
-import org.manage.log.common.constants.LogRecordIndexSort;
-import org.manage.log.common.constants.LogRecordSort;
-import org.manage.log.common.constants.OperatorSort;
+import org.manage.log.common.model.log.constants.LogRecordIndexSort;
+import org.manage.log.common.model.log.constants.LogRecordSort;
+import org.manage.log.common.model.log.constants.OperatorSort;
 import org.manage.log.common.model.log.LogRecord;
 import org.manage.log.common.model.log.LogRecordIndex;
+import org.manage.log.common.model.log.builder.LogRecordFactory;
 import org.manage.log.query.provider.repository.LogRecordMysqlRepository;
 import org.manage.log.query.provider.repository.mysql.model.LogRecordIndexMysqlPO;
 import org.manage.log.query.provider.repository.mysql.model.LogRecordMysqlPO;
+import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Map;
@@ -23,13 +25,10 @@ import static java.util.Optional.ofNullable;
  * @author cartoon
  * @date 2021/11/25 20:34
  */
+@Component
 public class MysqlEntityBuilder {
 
-    private static final MysqlEntityBuilder INSTANCE = new MysqlEntityBuilder();
-
-    public static MysqlEntityBuilder getInstance(){
-        return INSTANCE;
-    }
+    private final LogRecordFactory logRecordFactory;
 
     /**
      * convert po list to model list
@@ -55,26 +54,29 @@ public class MysqlEntityBuilder {
      */
     public LogRecord convertToModel(LogRecordMysqlPO logRecordMysqlPO, List<LogRecordIndexMysqlPO> logRecordIndexMysqlPOList){
         return ofNullable(logRecordMysqlPO).map(po -> {
-            LogRecord logRecord = new LogRecord();
-            logRecord.setRecordId(po.getRecordId())
-                    .setContent(po.getContent())
-                    .setOperatorSort(OperatorSort.parse(po.getOperatorSort()))
-                    .setOperator(po.getOperator())
-                    .setLogRecordSort(LogRecordSort.parse(po.getLogRecordSort()))
-                    .setVersion(po.getVersion())
-                    .setCreateTime(po.getCreateTime())
-                    .setModifyTime(po.getModifyTime())
-                    .addIndexList(logRecordIndexMysqlPOList.stream().map(indexPo -> {
-                        LogRecordIndex logRecordIndex = new LogRecordIndex();
-                        logRecordIndex.setIndexId(indexPo.getIndexId())
-                                .setLogRecordId(indexPo.getLogRecordId())
-                                .setLogRecordIndexSort(LogRecordIndexSort.parse(indexPo.getSort()))
-                                .setIndexValue(indexPo.getIndexValue())
-                                .setVersion(indexPo.getVersion())
-                                .setCreateTime(indexPo.getCreateTime())
-                                .setModifyTime(indexPo.getModifyTime());
-                        return logRecordIndex;
-                    }).collect(Collectors.toList()));
+            List<LogRecordIndex> indexList = logRecordIndexMysqlPOList.stream().map(indexPo ->
+                    new LogRecordIndex(
+                        indexPo.getIndexId(),
+                        indexPo.getLogRecordId(),
+                        LogRecordIndexSort.parse(indexPo.getSort()),
+                        indexPo.getIndexValue(),
+                        indexPo.getVersion(),
+                        indexPo.getCreateTime(),
+                        indexPo.getModifyTime()
+            )).toList();
+
+            LogRecord logRecord = new LogRecord(
+                    po.getRecordId(),
+                    po.getContent(),
+                    OperatorSort.parse(po.getOperatorSort()),
+                    po.getOperator(),
+                    LogRecordSort.parse(po.getLogRecordSort()),
+                    indexList,
+                    po.getVersion(),
+                    po.getCreateTime(),
+                    po.getModifyTime()
+            );
+            logRecordFactory.check(logRecord);
             return logRecord;
         }).orElse(null);
     }
@@ -96,33 +98,37 @@ public class MysqlEntityBuilder {
     public ImmutablePair<LogRecordMysqlPO, List<LogRecordIndexMysqlPO>> convertToPo(LogRecord logRecord){
         //convert log model to po
         LogRecordMysqlPO logRecordMysqlPO = new LogRecordMysqlPO();
-        logRecordMysqlPO.setRecordId(logRecord.getRecordId())
-                .setContent(logRecord.getContent())
-                .setOperatorSort(logRecord.getOperatorSort().getSortDescription())
-                .setOperator(logRecord.getOperator())
-                .setLogRecordSort(logRecord.getLogRecordSort().getSortDescription())
-                .setVersion(logRecord.getVersion())
-                .setCreateTime(logRecord.getCreateTime())
-                .setModifyTime(logRecord.getModifyTime());
-        if(CollectionUtils.isNotEmpty(logRecord.getIndexList())){
-            logRecordMysqlPO.setIndexIds(logRecord.getIndexList().stream().map(LogRecordIndex::getIndexId).collect(Collectors.joining(LogRecordMysqlRepository.INDEX_SPLIT_CHARACTER)));
+        logRecordMysqlPO.setRecordId(logRecord.recordId())
+                .setContent(logRecord.content())
+                .setOperatorSort(logRecord.operatorSort().getSortDescription())
+                .setOperator(logRecord.operator())
+                .setLogRecordSort(logRecord.logRecordSort().getSortDescription())
+                .setVersion(logRecord.version())
+                .setCreateTime(logRecord.createTime())
+                .setModifyTime(logRecord.modifyTime());
+        if(CollectionUtils.isNotEmpty(logRecord.indexList())){
+            logRecordMysqlPO.setIndexIds(logRecord.indexList().stream().map(LogRecordIndex::indexId).collect(Collectors.joining(LogRecordMysqlRepository.INDEX_SPLIT_CHARACTER)));
         }
         //convert index model to po
-        List<LogRecordIndexMysqlPO> indexMysqlPOS = ofNullable(logRecord.getIndexList()).map(
+        List<LogRecordIndexMysqlPO> indexMysqlPOS = ofNullable(logRecord.indexList()).map(
                 indexList -> indexList.stream().map(
                         index -> {
                             LogRecordIndexMysqlPO indexMysqlPO = new LogRecordIndexMysqlPO();
-                            indexMysqlPO.setIndexId(index.getIndexId())
-                                    .setLogRecordId(index.getLogRecordId())
-                                    .setSort(index.getLogRecordIndexSort().getSortDescription())
-                                    .setIndexValue(index.getIndexValue())
-                                    .setVersion(index.getVersion())
-                                    .setCreateTime(index.getCreateTime())
-                                    .setModifyTime(index.getModifyTime());
+                            indexMysqlPO.setIndexId(index.indexId())
+                                    .setLogRecordId(index.logRecordId())
+                                    .setSort(index.logRecordIndexSort().getSortDescription())
+                                    .setIndexValue(index.indexValue())
+                                    .setVersion(index.version())
+                                    .setCreateTime(index.createTime())
+                                    .setModifyTime(index.modifyTime());
                             return indexMysqlPO;
                         }
                 ).collect(Collectors.toList())
         ).orElse(ImmutableList.of());
         return ImmutablePair.of(logRecordMysqlPO, indexMysqlPOS);
+    }
+
+    public MysqlEntityBuilder(LogRecordFactory logRecordFactory) {
+        this.logRecordFactory = logRecordFactory;
     }
 }
